<resources>
    <string name="app_name">AppFormLayout</string>
    <string name="preferences_file">internship-distribution-android.file</string>


    <!-- Меню входа -->
    <string name="welcome_message">
        Добро пожаловать на платформу по подборке компании для практики</string>
    <string name="login_tip">Логин</string>
    <string name="password_tip">Пароль</string>
    <string name="button_login">Войти</string>

    <!-- Меню студента -->
    <string name="student_name">Кукшинов Дмитрий</string>
    <string name="companies_btn">Компании</string>
    <string name="cv_btn">Загрузить резюме</string>
    <string name="settings_btn">Настройки УЗ студентов</string>
    <string name="office_results_btn">Результаты распределения</string>

    <!-- Меню работника учебного офиса -->
    <string name="worker_name">Менеджер</string>
    <string name="list_of_students_btn">Список студентов</string>
    <string name="priorities_btn">Расставить приоритеты</string>
    <string name="results_btn">Результаты распределения</string>

    <!-- Меню просмотра компаний -->
    <string name="choose_company_hint">Список доступных компаний:</string>
    <string name="show_company_example">Компания 1</string>
    <string name="show_company_description_example"> </string>
    <string name="show_free_places_example">Количество свободных мест - 25</string>
    <string-array name="company_vars_example">
        <item>Гриндата</item>
        <item>ПНППК</item>
        <item>Юникорн</item>
        <item>Смарт-аналитикс</item>
        <item>ЭР-Телеком</item>
    </string-array>

    <!-- Меню выбора приоритетов компаний -->
    <string name="priorities_results_btn">Не выбрано</string>
    <string name="priorities_top_company">Комп. 1</string>
    <string name="priorities_mid_company">Комп. 2</string>
    <string name="priorities_low_company">Комп. 3</string>
    <string name="priorities_choose_hint">Расставьте приоритеты компаниям</string>
    <string name="priorities_save_changes">Сохранить</string>

    <!-- Меню загрузки резюме -->
    <string name="cv_load_hint">Управление резюме</string>
    <string name="cv_btn_choose_pdf">Выбрать PDF-файл</string>
    <string name="cv_pdf_example">Пока ничего не выбрано</string>
    <string name="cv_btn_upload">Загрузить</string>
    <string name="cv_btn_download">Скачать резюме</string>
    <string name="cv_btn_delete">Удалить резюме</string>

    <!-- Меню просмотра компаний от лица работника учебного офиса -->
    <string name="company_save_changes_btn">Сохранить изменения</string>
    <string name="company_add_btn">Добавить компанию</string>
    <string name="company_delete_btn">Удалить компанию</string>

    <!-- Меню таблицы студентов -->
    <string name="students_table_title">Таблица студентов</string>
    <string name="students_table_column_name_of_student">ФИО</string>
    <string name="students_table_column_priority_of_student">Приоритет</string>
    <string name="students_table_column_company">Компания</string>
    <string name="students_table_download_cv">Скачать</string>
    <string name="students_table_status_title">Компания</string>
    <string-array name="students_table_status">
        <item>Не выбрано</item>
        <item>Направлено</item>
        <item>Отказ</item>
        <item>Приглашение</item>
        <item>В работе</item>
    </string-array>

    <!-- Меню управления учетными записями студентов -->
    <string name="change_account_btn">Сохранить изменения</string>
    <string name="add_account_btn">Добавить</string>
    <string name="delete_account_btn">Удалить</string>
    <string name="account_table_title">Таблица учетных записей</string>
    <string name="account_form_login">Логин(почта):</string>
    <string name="account_form_password">Пароль:</string>
    <string name="account_form_name_of_student">ФИО:</string>
    <string name="office_enter_company_name">Введите название компании...</string>
    <string name="office_enter_company_description">Введите описание компании...</string>
    <string name="new_company">Новая компания</string>

    <!-- Статусы компаний -->
    <string name="status_sent">Направлено</string>
    <string name="status_not_selected">Не выбрано</string>
    <string name="status_label_sent">Статус: Направлено</string>
    <string name="status_label_not_selected">Статус: Не выбрано</string>
    <string name="toSettings">В настройки</string>
    <string name="writeStoragePermissionRationale">Для сохранения резюме необходимо дать разрешение на запись файлов!</string>
    <string name="writeStoragePermissionRationaleAfterNeverAskAgain">Для сохранения резюме необходимо дать разрешение на запись файлов, это можно сделать в настройках!</string>
</resources>