<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewCompaniesActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            style="@style/StaticMenuText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/choose_company_hint" />

        <Spinner
            android:id="@+id/office_spinner_companies"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            style="@style/SpinnerStyle"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/office_view_company_name"
            style="@style/StaticMenuText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/show_company_example"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/office_view_company_description"
            style="@style/PlainText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:text="@string/show_company_description_example" />


        <Button
            android:id="@+id/company_save_changes_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:text="@string/company_save_changes_btn" />

        <Button
            android:id="@+id/company_add_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:text="@string/company_add_btn" />

        <Button
            android:id="@+id/company_delete_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/company_delete_btn" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>