<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyPrioritiesActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/StaticMenuText"
        android:text="@string/priorities_choose_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        style="@style/CompanyViewStyle"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/PrioritiesPlainStaticText"
            android:text="@string/priorities_top_company"/>

        <Spinner
            android:id="@+id/priorities_spinner_top"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/priorities_status_top"
            style="@style/OvalStatusStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/status_not_selected" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        style="@style/CompanyViewStyle"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/PrioritiesPlainStaticText"
            android:text="@string/priorities_mid_company"/>

        <Spinner
            android:id="@+id/priorities_spinner_mid"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/prioties_status_mid"
            style="@style/OvalStatusStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/status_not_selected" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        style="@style/CompanyViewStyle"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/PrioritiesPlainStaticText"
            android:text="@string/priorities_low_company"/>

        <Spinner
            android:id="@+id/priorities_spinner_low"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/priorities_status_low"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            style="@style/OvalStatusStyle"
            android:gravity="center"
            android:text="@string/status_not_selected" />
    </LinearLayout>

    <Button
        android:id="@+id/priorities_btn_save"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/priorities_save_changes" />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>