<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <LinearLayout
                style="@style/LoginMenuStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_background"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    style="@style/StaticLoginMenuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/welcome_message" />

                <EditText
                    android:id="@+id/main_loginText"
                    style="@style/InputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="40dp"
                    android:hint="@string/login_tip"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/main_passwordText"
                    style="@style/InputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:hint="@string/password_tip"
                    android:inputType="textPassword"
                    android:textAlignment="textStart" />

                <Button
                    android:id="@+id/main_loginButton"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/button_login" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>