<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentsTableActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/students_table_title"
        style="@style/TitleStudentsTableText"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/table_students"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:divider="@drawable/row_divider"
            android:showDividers="beginning|middle|end">

            <TableRow>

                <TextView
                    style="@style/HeaderStudentsTableText"
                    android:layout_weight="1"
                    android:text="@string/students_table_column_name_of_student" />

                <TextView
                    style="@style/HeaderStudentsTableText"
                    android:layout_weight="1"
                    android:text="@string/students_table_column_company" />

                <TextView
                    style="@style/HeaderStudentsTableText"
                    android:layout_weight="1"
                    android:text="@string/students_table_column_priority_of_student" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="Студент 1" />

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="ГринДата" />

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="1" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="Студент 1" />

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="Юникорн" />

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="2" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="Студент 1" />

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="ПНППК" />

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="1" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="Студент 2" />

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="ГринДата" />

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="3" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="Студент 2" />

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="Смарт-аналитикс" />

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="2" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="Студент 1" />

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="ЭР-Телеком" />

                <TextView
                    style="@style/PlainStudentsTableText"
                    android:layout_weight="1"
                    android:text="1" />
            </TableRow>
        </TableLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/table_students_download_cv_btn"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/students_table_download_cv" />

        <Spinner
            android:id="@+id/students_table_spinner_status"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
</LinearLayout>